--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!-- STYLES -->
 
 <!DOCTYPE html>
+
 <head>
     <title>Seven Principles of Typographic Contrast</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" 
+        rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
    <h1>Seven Principles of Typographic Contrast</h1>
